# ykgen

./: .gitignore  COMFYUI_SETUP.md  COMFYUI_SETUP_CN.md  README.md  README_CN.md  env.example  image_model_config.json  lora_config.json  main.py  optimization_progress.md  pyproject.toml  start_webui.py  webui.py
.cursor/rules/: readme.mdc
kgen/: __init__.py  utils.py
kgen/agents/: __init__.py  base_agent.py  poetry_agent.py  pure_image_agent.py  video_agent.py
kgen/audio/: __init__.py  comfyui_audio.py
kgen/cli/: __init__.py  cli.py  display.py  input_handlers.py  lora_selection.py  menu.py
kgen/config/: config.py  constants.py  exceptions.py  lora_config.json
kgen/console/: __init__.py  display.py
kgen/factories/: __init__.py  agent_factory.py
kgen/image/: __init__.py  comfyui_image_base.py  comfyui_image_flux.py  comfyui_image_illustrious.py  comfyui_image_wai.py  group_mode_image_generator.py
kgen/lora/: lora_selector.py
kgen/model/: models.py
kgen/providers/: __init__.py  llm_providers.py
kgen/video/: __init__.py  base_video_client.py  client_factory.py  siliconflow_client.py  video_manager.py
tests/: __init__.py  audio_tester.py  comfyui_tester.py  config_mode_tester.py  conservative_video_prompt_test.py  console_demo.py  demo_enhanced_lora.py  enhanced_lora_selection_test.py  example_guided_prompt_test.py  gen_tester.py  interactive_demo.py  lora_modes_test.py  optimized_lora_selection_test.py  poetry_agent_tester.py  recommended_settings_test.py  siliconflow_video_test.py  style_test.py  test_model_lookup_fix.py  test_poetry_pure_image.py  test_wai_model.py  text_exclusion_test.py  video_provider_test.py  video_tester.py
ykgen/: __init__.py  utils.py
ykgen/agents/: __init__.py  base_agent.py  poetry_agent.py  pure_image_agent.py  video_agent.py
ykgen/audio/: __init__.py  comfyui_audio.py
ykgen/cli/: __init__.py  cli.py  display.py  input_handlers.py  lora_selection.py  menu.py
ykgen/config/: README_CONFIG.md  config.py  constants.py  exceptions.py  image_model_config.json  image_model_loader.py  lora_config.json  model_types.py
ykgen/console/: __init__.py  display.py
ykgen/factories/: __init__.py  agent_factory.py
ykgen/image/: __init__.py  comfyui_image_base.py  comfyui_image_flux.py  comfyui_image_illustrious.py  comfyui_image_simple.py  comfyui_image_vpred.py  group_mode_image_generator.py
ykgen/lora/: lora_loader.py  lora_selector.py
ykgen/model/: models.py
ykgen/providers/: __init__.py  llm_providers.py
ykgen/video/: __init__.py  base_video_client.py  client_factory.py  siliconflow_client.py  video_manager.py
